--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <!-- navbar -->
         <nav class="bg-[#edf6ff]">
-            <div class="navbar shadow-sm">
+            <div class="navbar shadow-sm px-10">
             <div class="navbar-start">
                 <div class="dropdown">
                 <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -78,11 +78,11 @@
             </div>
         </nav>
         <!-- banner section -->
-        <section class="banner flex justify-between items-center flex-col-reverse md:flex-row w-11/12  mx-[auto] py-5 gap-10">
+        <section class="banner flex justify-between items-center flex-col-reverse md:flex-row w-11/12  mx-auto py-5 gap-10">
             <div class="banner-content flex-1 text-center md:text-left">
-                <h1 class="text-4xl font-bold mb-8"><span class="text-[#00BCFF]">English</span> is Easy!!</h1>
+                <h1 class="text-3xl md:text-4xl font-bold mb-8"><span class="text-[#00BCFF]">English</span> is Easy!!</h1>
                 <p class="font-bangla">আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা আপনার দক্ষতা বাড়াতে চান, আমাদের Interactive Lessons আপনাকে নিয়ে যাবে অন্য একটি Level এ</p>
-                <form action="" class="mt-4 flex flex-col gap-3 w-[50%]">
+                <form action="" class="mt-4 flex flex-col items-center md:items-start gap-3">
                     <input class="input" type="text" placeholder="Enter your Name">
                     <input class="input" type="password" name="" id="" placeholder="Enter your password">
                     <button class="btn btn-primary w-fit">Get Started</button>
@@ -93,5 +93,21 @@
             </div>
         </section>
     </header>
+    <!-- Vocabularies-section -->
+     <section class="vocabularies py-10 w-11/12 mx-auto">
+        <h1 class="text-3xl md:text-4xl text-center font-bold mb-8"><span class="text-[#00BCFF]">Let's</span> learn Vocabularies</h1>
+        <div id="level-container" class="flex flex-wrap justify-center gap-5">
+            
+        </div>
+        <div id="words-container" class="py-5 mt-5 gap-5 grid grid-cols-3">
+            <div class="bg-[#f8f8f8] py-15 rounded-2xl col-span-3 text-center">
+                <p class="font-bangla text-sm">আপনি এখনো কোন Lesson Select করেন নি</p>
+                <h2 class="font-bangla font-bold text-lg md:text-2xl mt-3">একটি Lesson Select করুন।</h2>
+            </div>
+            
+        </div>
+    </section>
+
+     <script src="./index.js"></script>
 </body>
 </html>
