--- a/index.html
+++ b/index.html
@@ -107,6 +107,35 @@
             
         </div>
     </section>
+    <!-- FAQ section -->
+    <section class="faq my-20 w-11/12 mx-auto space-y-5">
+        <h1 class="text-2xl md:text-4xl text-center font-bold mb-8"><span class="text-[#00BCFF]">Frequently</span> Asked Questions</h1>
+        <div class="collapse collapse-plus bg-[#f8f8f8] border border-base-300">
+            <input type="checkbox" name="my-accordion-3" />
+            <div class="collapse-title font-semibold">How can I start learning English on this website?</div>
+            <div class="collapse-content text-sm">Just go to the Beginner Lessons section and start with interactive exercises, quizzes, and step-by-step courses.</div>
+        </div>
+        <div class="collapse collapse-plus bg-[#f8f8f8] border border-base-300">
+            <input type="checkbox" name="my-accordion-3" />
+            <div class="collapse-title font-semibold">Is this website free to use?</div>
+            <div class="collapse-content text-sm">Yes, most of the lessons and practice materials are free. Some advanced features may require a premium plan.</div>
+        </div>
+        <div class="collapse collapse-plus bg-[#f8f8f8] border border-base-300">
+            <input type="checkbox" name="my-accordion-3" />
+            <div class="collapse-title font-semibold">Do I need to create an account?</div>
+            <div class="collapse-content text-sm">No account is needed to browse free lessons, but creating an account helps you save progress, track results, and access personalized learning.</div>
+        </div>
+        <div class="collapse collapse-plus bg-[#f8f8f8] border border-base-300">
+            <input type="checkbox" name="my-accordion-3" />
+            <div class="collapse-title font-semibold">How can I build my English vocabulary?</div>
+            <div class="collapse-content text-sm">Practice daily with our word lists, flashcards, and quizzes. You can also explore vocabulary lessons by levels to grow step by step.</div>
+        </div>
+        <div class="collapse collapse-plus bg-[#f8f8f8] border border-base-300">
+            <input type="checkbox" name="my-accordion-3" />
+            <div class="collapse-title font-semibold">Do you offer certificates for completed courses?</div>
+            <div class="collapse-content text-sm">Yes, after completing structured courses, you will receive a digital certificate to showcase your achievement.</div>
+        </div>
+      </section>
 
      <script src="./index.js"></script>
 </body>
