--- a/index.html
+++ b/index.html
@@ -136,7 +136,28 @@
             <div class="collapse-content text-sm">Yes, after completing structured courses, you will receive a digital certificate to showcase your achievement.</div>
         </div>
       </section>
-
+     <footer class="bg-[#edf6ff]">
+        <div class="w-11/12 mx-auto flex justify-between py-20">
+            <div>
+                <a class="flex items-center gap-2">
+                    <span class="font-bold">English</span>
+                    <img class="w-[30px]" src="./assets/logo.png" alt="">
+                    <span class="font-bangla font-semibold">জানালা</span>
+                </a>
+                <p class="mt-4 mb-3">ইংরেজি শিখুন সহজে</p>
+                <p class="text-sm">Providing ED-Tech Applications since 2025</p>
+            </div>
+            <div>
+                <p>FOLLOW US ON</p>
+                <div class="flex items-center gap-3 mt-2">
+                    <a href=""><img src="./assets/fb-thumb.png" alt=""></a>
+                    <a href=""><img src="./assets/youtube-thumb.png" alt=""></a>
+                    <a href=""><img src="./assets/instagram-thumb.png" alt=""></a>
+                    <a href=""><img src="./assets/github-thumb.png" alt=""></a>
+                </div>
+            </div>
+        </div>
+     </footer>
      <script src="./index.js"></script>
 </body>
 </html>
